Added Random Bin

--- a/Mid.ipynb
+++ b/Mid.ipynb
@@ -299,7 +299,7 @@
         "cudnn.benchmark = True  # Should make training should go faster for large models\n",
         "train_val_ratio = 0.99\n",
         "\n",
-        "M = 30\n",
+        "M = 4\n",
         "N = 10\n",
         "\n",
         "torch.manual_seed(seed)\n",
@@ -325,25 +325,24 @@
       },
       "source": [
         "class FacialDataset(Dataset):\n",
-        "    def __init__(self, data_path, transform):\n",
+        "    def __init__(self, data_path, transform, centroid):\n",
         "        if not os.path.exists(data_path):\n",
         "            raise Exception(f\"[!] {self.data_path} not existed\")\n",
         "        self.imgs = []\n",
-        "        self.labels = []\n",
+        "        self.age = []\n",
         "        self.transform = transform\n",
+        "        self.centroid = centroid\n",
         "        self.age_path = sorted(glob(os.path.join(data_path, \"*.*\")))\n",
         "        for pth in self.age_path:\n",
         "            img = pth\n",
         "            label = int(pth.split('_')[0].split('/')[-1])\n",
-        "            self.labels.append(label)\n",
+        "            self.age.append(label)\n",
         "            self.imgs.append(img)\n",
         "    def __getitem__(self, idx):\n",
         "        image = self.transform(Image.open(self.imgs[idx]))\n",
-        "        age = self.labels[idx]\n",
-        "        label = [normal_sampling(int(age), i) for i in range(117)]\n",
-        "        label = [i if i > 1e-15 else 1e-15 for i in label]\n",
-        "        label = torch.Tensor(label)\n",
-        "        return image , label, age\n",
+        "        age = self.age[idx]\n",
+        "        label = \n",
+        "        return image , age\n",
         "\n",
         "    def __len__(self):\n",
         "        return len(self.age_path)\n",
@@ -366,13 +365,14 @@
         "                                    std=[0.2715, 0.2423, 0.2354])\n",
         "    ])\n",
         "\n",
+        "    centroid, _ = torch.sort(torch.randint(1, 120, (M,N)), dim=1)\n",
         "    full_dataset = FacialDataset(data_path, val_transform)\n",
         "    train_size = int(train_val_ratio * len(full_dataset))\n",
         "    val_size = len(full_dataset) - train_size\n",
         "\n",
         "    train_dataset, val_dataset = torch.utils.data.random_split(full_dataset, [train_size, val_size])\n",
         "    train_dataset.dataset = FacialDataset(data_path, train_transform)\n",
-        "    \n",
+        "\n",
         "    torch.manual_seed(3334)\n",
         "    train_loader = torch.utils.data.DataLoader(dataset=train_dataset,batch_size=batch_size, shuffle=True,num_workers=num_workers, pin_memory=False)\n",
         "    val_loader = torch.utils.data.DataLoader(dataset=val_dataset,batch_size=batch_size,shuffle=False,num_workers=num_workers, pin_memory=True)\n",
